fix spacing issue in datetime in ie (#1499)

--- a/component-lib/app/styles/component-lib/base/form/_form-datetime-picker.scss
+++ b/component-lib/app/styles/component-lib/base/form/_form-datetime-picker.scss
@@ -46,6 +46,8 @@
 
   .numInputWrapper {
     span {
+      right: auto;
+
       &.arrowUp {
         &:after {
           border-bottom-color: rsa-color(gray, lightest);
